[gd_scene load_steps=3 format=2]

[ext_resource path="res://features/dialog_system/dialog_system.gd" type="Script" id=1]
[ext_resource path="res://features/dialog_system/dialog_interface.tscn" type="PackedScene" id=2]

[node name="DialogSystem" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogInterface" parent="CanvasLayer" instance=ExtResource( 2 )]
visible = false

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="answer_given" from="CanvasLayer/DialogInterface" to="." method="_on_DialogInterface_answer_given"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
